<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">USB Serial Console</string>

    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_clear_log">Clear</string>
    <string name="action_save_log">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_log_list">Log list</string>

    <string name="visible">Visible</string>
    <string name="invisible">Invisible</string>

    <string name="delete_log_file_title">Delete log file</string>
    <string name="delete_log_file_text">Delete log file?</string>
    <string name="file_name">File name</string>

    <string name="send">Send</string>
    <string name="send_message_hint">Send message here</string>

    <string name="usb_permission_granted">Device ready</string>
    <string name="usb_permission_not_granted">Permission not granted</string>
    <string name="no_usb">No device connected</string>
    <string name="usb_disconnected">Disconnected</string>
    <string name="usb_not_supported">USB device not supported</string>

    <string name="serial_port_title">Serial port</string>
    <string name="connection_title">Connection</string>

    <string name="baudrate_title">Baud rate</string>
    <string name="databits_title">Data bits</string>
    <string name="parity_title">Parity check</string>
    <string name="stopbits_title">Stop bit</string>
    <string name="flowcontrol_title">Flow control</string>

    <string name="display_title">Display</string>
    <string name="display_clear">Clear</string>

    <string name="send_form_visible_title">Send form</string>
    <string name="timestamp_title">Timestamp</string>
    <string name="timestamp_format_title">Timestamp format</string>

    <string name="screen_orientation_title">Screen orientation</string>
    <string name="screen_orientation_device_setting">Device setting</string>
    <string name="screen_orientation_portrait">Portrait</string>
    <string name="screen_orientation_reverse_portrait">Reverse portrait</string>
    <string name="screen_orientation_landscape">Landscape</string>
    <string name="screen_orientation_reverse_landscape">Reverse landscape</string>

    <string name="line_feed_code_title">Line feed code</string>

    <string name="license_title">License</string>

    <string name="send_pref_category_title">Send</string>
    <string name="receive_pref_category_title">Receive</string>

    <string name="action_share">Share</string>

    <string name="confirm_connect">Connect device?</string>

    <string name="start_connection">Connection start</string>
    <string name="stop_connection">Connection stop</string>

    <string name="usb_connection_service">USB connection service</string>
    <string name="service_starting_up">Service starting up…</string>

    <string name="sleep_mode_title">Stay awake</string>
    <string name="sleep_mode_summary_on">Screen will never sleep</string>
    <string name="sleep_mode_summary_off">Screen will sleep</string>

    <string name="color_pref_category_title">Color</string>
    <string name="color_console_text_title">Text</string>
    <string name="color_console_background_title">Background</string>

    <string name="confirm_clear_color">Clear color settings?</string>
    <string name="clear_color">Color settings is cleared</string>

</resources>
