<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jp.sugnakys.usbserialconsole.presentation.MainActivity">
    <item
        android:id="@+id/action_save_log"
        android:orderInCategory="100"
        android:title="@string/action_save_log"
        android:icon="@drawable/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        android:icon="@drawable/settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_connect"
        android:enabled="false"
        android:orderInCategory="300"
        android:title="@string/action_connect"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_log_list"
        android:orderInCategory="400"
        android:title="@string/action_log_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_log"
        android:orderInCategory="500"
        android:title="@string/action_clear_log"
        app:showAsAction="never" />
</menu>
